<resources>

    <!-- Global Strings -->
    <string name="global_appName">Util3D</string>
    <string name="global_fragmentName_createAccount">Create Account</string>
    <string name="global_fragmentName_createProject">Create Project</string>
    <string name="global_fragmentName_dashboard">Dashboard</string>
    <string name="global_fragmentName_login">Login</string>
    <string name="global_fragmentName_map">Map</string>
    <string name="global_fragmentName_openProject">Open Project</string>
    <string name="global_fragmentName_settings">Settings</string>
...
    <string name="s_fragment_createAccount_editText_hint_email">Email</string>
    <string name="s_fragment_createAccount_editText_hint_password">Password</string>
    <string name="s_fragment_createAccount_editText_hint_repeatPassword">Repeat Password</string>
    <string name="s_fragment_createAccount_editText_hint_securityQuestion">Security Question</string>
    <string name="s_fragment_createAccount_editText_hint_securityAnswer">Security Answer</string>
    <string name="s_fragment_createAccount_button_clear">Clear</string>
    <string name="s_fragment_createAccount_button_create">Create</string>
    <string name="s_fragment_createAccount_button_cancel">Cancel</string>
    <string name="s_fragment_createAccount_errorMessage_PasswordsNotMatching">Passwords do not match</string>
    <string name="s_fragment_createAccount_errorMessage_usernameNotSet">Failed to set username. Try to change username in settings instead.</string>
    <!-- Error -->
    <string name="s_fragment_createAccount_errorMessage_fieldError">Field error!</string>
    <!-- Debug -->
...

    <!-- DashboardFragment Strings -->
    <string name="s_fragment_dashboard_textView_filesPlaceholder">Files Fragment goes here.</string>
    <string name="s_fragment_dashboard_button_createProject">Create Project</string>
    <string name="s_fragment_dashboard_button_openProject">Open Project</string>
    <string name="s_fragment_dashboard_button_settings">Settings</string>
    <string name="s_fragment_dashboard_button_logout">Logout</string>
    <string name="s_fragment_dashboard_alertMessage_logOutPrompt">Are you sure you want to log out?</string>
    <string name="s_fragment_dashboard_alertMessage_loggedOut">Logout successful.</string>

    <!-- SettingsFragment Strings -->
    <string name="s_fragment_settings_title">Settings</string>
    <string name="s_fragment_settings_button_changePassword">Change Password</string>
...
