<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_linearLayout_root"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.se319s18a9.util3d.Fragments.LoginFragment">

    <!-- Application Name -->
...
        android:textSize="@dimen/d_global_defaultFontSize" />

    <!-- Create Account Button -->

    <Button
        android:background="@color/colorAccent"
        android:id="@+id/fragment_login_button_createAccount"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_global_defaultVerticalMargin"
        android:layout_marginStart="@dimen/d_global_defaultVerticalMargin"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/d_global_defaultHorizontalPadding"
...
